# TonexOne

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
Files/: CMakeLists.txt  Corpo .stl  Tampa.stl
main/: CMakeLists.txt  control.c  footswitches.c  i2c-lcd.c  i2c-lcd.h  idf_component.yml  index.html  leds.c  main.c  main.h  midi_helper.c  task_priorities.h  usb_comms.h  usb_tonex_one.c  usb_tonex_one.h  wifi_config.c
