
idf_component_register(SRCS "tonex_params.c" "midi_helper.c" "midi_control.c" "control.c" "footswitches.c" "main.c" 
                            "usb_comms.c" "usb_tonex_one.c" "midi_serial.c" "wifi_config.c" "leds.c" 
                            EMBED_TXTFILES index.html 
                            INCLUDE_DIRS "." "./")
                                                       



